--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    <h2>Hello world from HOSTNAME!</h2>
+    <h2>Hello wonderful world of wow from HOSTNAME!</h2>
   </body>
 </html>
