--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Blue/Green Deploy Demo</title>
     <style>
       body {
-        /* background-color: blanchedalmond; */
-        background-color: crimson;
+        background-color: blanchedalmond;
+        /* background-color: crimson; */
       }
     </style>
   </head>
