--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Blue/Green Deploy Demo</title>
+    <title>Jerry Hello!</title>
     <style>
       body {
         /* background-color: blanchedalmond; /*
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    <h2>Hello wonderful world of wow from HOSTNAME!</h2>
+    <h2>Jerry!  Hello!! From Uncle Leo</h2>
   </body>
 </html>
