--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Jerry Hello!</title>
+    <title>Hello Jerry!</title>
     <style>
       body {
         /* background-color: blanchedalmond; /*
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    <h2>Jerry!  Hello!! From Uncle Leo</h2>
+    <h2>Helloooo Jerry!! From Newman</h2>
   </body>
 </html>
