--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <h2>Jerry Hello - from Uncle Leo</h2>
+    <img src="http://i.imgur.com/ioNdIQ5.jpg">
   </body>
 </html>
