--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Jerry Hello!</title>
     <style>
       body {
-        /* background-color: blanchedalmond; /*
+        /* background-color: blanchedalmond; */
         background-color: crimson;
       }
     </style>
@@ -11,5 +11,7 @@
   <body>
     <h2>Jerry Hello - from Uncle Leo</h2>
     <img src="http://i.imgur.com/ioNdIQ5.jpg">
+    /* <h2>Hellooooo Jerry - from Newman</h2>
+    <img src="http://i.stack.imgur.com/QCr38.jpg"> */
   </body>
 </html>
