--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h2>Jerry Hello - from Uncle Leo</h2>
     <img src="http://i.imgur.com/ioNdIQ5.jpg">
-    /* <h2>Hellooooo Jerry - from Newman</h2>
-    <img src="http://i.stack.imgur.com/QCr38.jpg"> */
+    /* <h2>Hellooooo Jerry - from Newman</h2> */
+    /* <img src="http://i.stack.imgur.com/QCr38.jpg"> */
   </body>
 </html>
