--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hello Jerry!</title>
+    <title>Jerry Hello!</title>
     <style>
       body {
         background-color: blanchedalmond; 
@@ -9,9 +9,9 @@
     </style>
   </head>
     <body>
-      <!-- <h2>Jerry Hello - from Uncle Leo</h2> -->
-      <!-- <img src="http://i.imgur.com/ioNdIQ5.jpg"> -->
-      <h2>Hellooooo Jerry - from Newman</h2> 
-      <img src="http://i.stack.imgur.com/QCr38.jpg">
+      <h2>Jerry Hello - from Uncle Leo</h2> 
+      <img src="http://i.imgur.com/ioNdIQ5.jpg">
+      <!-- <h2>Hellooooo Jerry - from Newman</h2>  -->
+      <!-- <img src="http://i.stack.imgur.com/QCr38.jpg">  -->
     </body>
 </html>
